# multi_layer_ui

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build.yml
conan/: install.py  profile.py
conan/profiles/: clang15
multi_layer_ui/: CMakeLists.txt  main.cpp
multi_layer_ui/engine/: CMakeLists.txt  conanfile.txt
multi_layer_ui/engine/include/engine/: base_module.hpp  engine.hpp  module_data.hpp  rect_t.hpp
multi_layer_ui/engine/src/: argument_parser.hpp  base_module.cpp  engine.cpp  module_a.cpp  module_a.hpp  module_b.cpp  module_b.hpp
multi_layer_ui/ui/: CMakeLists.txt  conanfile.txt
multi_layer_ui/ui/include/ui/: application.hpp
multi_layer_ui/ui/src/: application.cpp  example_app.cpp  example_app.hpp  ui_layer.hpp  ui_layer_a.hpp  ui_layer_b.hpp
